// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Page 1`] = `
<p
  className="ola_page"
>
  <strong
    className="ola_page-title"
  >
    Title test
  </strong>
  <span
    className="ola_page-url"
  >
    test.url.com
  </span>
</p>
`;

exports[`Page with Icon 1`] = `
<p
  className="ola_page has-icon"
>
  <span
    className="ola_page-icon"
  >
    <svg
      className="ola_icon is-medium"
      fillRule="evenodd"
      height="28"
      viewBox="0 0 28 28"
      width="28"
    >
      <path
        d="M14 2C7.376 2 2 7.376 2 14s5.376 12 12 12 12-5.376 12-12S20.624 2 14 2zm1 19h-2v-2h2v2zm2.07-7.75l-.9.92C15.45 14.9 15 15.5 15 17h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2h-2c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </span>
  <strong
    className="ola_page-title"
  >
    Title test
  </strong>
  <span
    className="ola_page-url"
  >
    test.url.com
  </span>
</p>
`;

exports[`Page with link 1`] = `
<p
  className="ola_page"
>
  <strong
    className="ola_page-title"
  >
    Title test
  </strong>
  <a
    className="ola_page-url"
    href="link.url.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    test.url.com
  </a>
</p>
`;
